# llm-client-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
examples/: huggingface_api.py  main.py  only_llm_api_client.py  open_ai.py
llm_client/: __init__.py  base_llm_api_client.py  base_llm_client.py  consts.py  llm_client_factory.py  llm_client_interface.py
llm_client/llm_api_client/: ai21_client.py  aleph_alpha_client.py  anthropic_client.py  base_llm_api_client.py  google_client.py  huggingface_client.py  llm_api_client_factory.py  openai_client.py
llm_client/llm_client/: ai21.py  local_client.py  openai_client.py
llm_client/sync/: get_sync_llm_client.py  sync_llm_api_client_factory.py
tests/huggingface_client/: conftest.py  test_huggingface.py
tests/llm_api_client/: conftest.py  test_llm_api_client_factory.py
tests/llm_api_client/ai21_client/: conftest.py  test_ai21.py
tests/llm_api_client/anthropic_client/: conftest.py  test_anthropic_client.py
tests/llm_api_client/google_client/: conftest.py  test_google_client.py
tests/llm_api_client/huggingface_client/: conftest.py  test_huggingface.py
tests/llm_api_client/openai_client/: conftest.py  test_openai.py
tests/llm_client/: test_llm_client_factory.py
tests/llm_client/local_client/: conftest.py  test_local_client.py
tests/llm_clients/ai21/: conftest.py  test_ai21.py
tests/llm_clients/openai/: conftest.py  test_openai.py
tests/resources/ai21/: text_completion.json  tokenize.json
tests/resources/google/: chat_completion.json  embedding.json  text_completion.json  tokens_count.json
tests/resources/huggingface/: text_completion.json
tests/resources/openai/: chat_completion.json  text_completion.json
tests/sync/: test_get_sync_llm_client.py  test_sync_llm_api_client_factory.py
tests/test_utils/: load_json_resource.py
