[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-client"
description = "SDK for using LLM"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Uri Peled", email = "uripeled2@gmail.com" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp >=3.0.0,<4.0.0",
    "dataclasses_json >= 0.5.0"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/uripeled2/llm-client-sdk"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-aiohttp",
    "pytest-asyncio",
    "pytest-mock",
    "aioresponses"
]
openai = [
    "openai >=0.27.4",
    "tiktoken >=0.3.3",
]
huggingface = [
    "transformers >= 4.0.0"
]
anthropic = [
    "anthropic >= 0.3.2"
]
google = [
    "google-generativeai >= 0.1.0"
]
api = [
    "llm-client[openai,huggingface,anthropic,google]"
]
local = [
    "transformers >= 4.0.0"
]
sync =  [
    "async_to_sync >= 0.2.0"
]
all = [
    "llm-client[api,local,sync]"
]

[tool.hatch.version]
path = "llm_client/__init__.py"

[tool.coverage.run]
parallel = true
source = [
    "tests",
    "llm_client"
]
context = '${CONTEXT}'
